quick edit to image source

--- a/index.html
+++ b/index.html
@@ -21,14 +21,10 @@
                 <h2 class="centered">CSCI-E15 P2</h2>
             </div>
         </div>
-        <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-7">
-                <img src="images/working.jpg" style="width:720px"><br>
+            <div class="centered">
+                <img src="images/Working.jpg" style="width:720px"><br>
                 <h2 class="centered">Work In Progress</h2>
             </div>
-            <div class="col-sm-3"></div>
-        </div>
     </div>
 </body>
 </html>
